ingress-yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-virtual-host
  annotations:
    kubernetes.io/ingress.class: "nginx-ingress"   # Using this annotation you can select the ingress controller 
spec:
  rules:
    - host: fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: webapp
              servicePort: 80
    - host: queue.fleetman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: queue
              servicePort: 8161
